small ui change pre-wrap issue:#26723

--- a/apps/uikit-playground/src/_global.css
+++ b/apps/uikit-playground/src/_global.css
@@ -62,3 +62,7 @@
 .rcx-modal__content:has(.uiKitWrapper){
     overflow: visible !important
 }
+
+div.rcx-message-system__body{
+    white-space: pre-wrap !important;
+}
